# Quant2Repo

./: .env.example  .gitignore  README.md  config.py  gateway_adapter.py  main.py  pyproject.toml  requirements.txt
advanced/: __init__.py  backtest_validator.py  cache.py  code_rag.py  context_manager.py  debugger.py  devops.py  evaluator.py  executor.py  test_generator.py
agents/: __init__.py  base.py  orchestrator.py
catalog/: strategies.json
core/: __init__.py  coder.py  file_analyzer.py  paper_parser.py  planner.py  refiner.py  strategy_extractor.py  validator.py
docs/: gateway-integration.md  index.html
prompts/: architecture_design.txt  auto_debug.txt  backtest_planner.txt  backtest_validator.txt  coder.txt  devops.txt  file_analysis.txt  reference_eval.txt  self_refine_refine.txt  self_refine_verify.txt  signal_logic.txt  strategy_extractor.txt  test_generator.txt  validator.txt
providers/: __init__.py  anthropic_provider.py  base.py  gemini.py  ollama.py  openai_provider.py  registry.py
quant/: __init__.py  asset_classes.py  catalog.py  data_sources.py  metrics.py  signals.py
tests/: test_quant2repo.py
wiki/: Architecture-Overview.md  Deployment-and-DevOps.md  Home.md  Pipeline-Stages-Deep-Dive.md  Provider-System-and-Configuration.md  Usage-Guide.md  _Sidebar.md
